scp/css/scp.css
/* ... */
#nav .inactive li {
    display:block;
    margin:0;
    padding:0;
    list-style:none;
    text-align:left;
}

#nav li.inactive:hover > ul {
    visibility: visible;
    opacity: 1;
    transition-delay: 0.25s;
}

.ieshadow {
    width:230px;
    background:#000;
    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30);
    -ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30)";
    zoom: 1;
    z-index:300;
    position:absolute;
    top:24px;
    left:0;
}

#nav .inactive li a {
    background-position: 10px 50%;
    background-repeat: no-repeat;
    padding: 0 10px 0 34px;
}

#nav .inactive li a:hover {
    color:#E65524;
    background-color: #fbfbfb;
    background-color: rgba(0,0,0,0.05);

}
/***********************************************************************
                 Start Custom Queues Menu System
/***********************************************************************/

#customQ_nav {
    background:#f7f7f7;
    border-bottom:1px solid #bebebe;
    clear:both;
    margin:0;
    padding:0;
    line-height:26px;
    border-left:1px solid #aaa;
    border-right:1px solid #aaa;
}



#customQ_nav .jb-overflowmenu-menu-primary li.item {
    position:relative;
    padding:3px 6px 4px;
    display: inline-block;
    border-top-right-radius: 6px;
    border-top-left-radius: 6px;
    z-index:10;
    margin:0 2px;
}

#customQ_nav .jb-overflowmenu-menu-primary li.item > a {
    display:inline-block;
    padding:0 10px 0 21px;
    background-position:0 50%;
    background-repeat:no-repeat;
    color:#000;
}

#customQ_nav .jb-overflowmenu-menu-primary li.item:hover {
    padding:2px 5px 4px;
    color:#E65524;
    background-color: #fff;
    border-left:1px solid #bebebe;
    border-top:1px solid #bebebe;
    border-right:1px solid #bebebe;
}

#customQ_nav .jb-overflowmenu-menu-primary li.item:hover > a {
    color:#E65524;
    text-decoration: none;
}

#customQ_nav .jb-overflowmenu-menu-primary li.item > a.active {
    font-weight:bold;
}

#customQ_nav .jb-overflowmenu-menu-primary li.item a > i {
    margin-top:5px;
}

#customQ_nav .open     { background-image:url(../images/icons/open.gif) }
#customQ_nav .answered { background-image:url(../images/icons/answered.gif) }
#customQ_nav .mine     { background-image:url(../images/icons/mine.gif) }
#customQ_nav .closed   { background-image:url(../images/icons/closed.gif) }
#customQ_nav .search   { background-image:url(../images/icons/search.gif) }
#customQ_nav .new      { background-image:url(../images/icons/new.gif) }

/**********************initiate Custom Queues Dropdown******************/

#customQ_nav ul li.item div.customQ-dropdown {
    display:none;
}

#customQ_nav ul li.item:hover div.customQ-dropdown {
    display:block;
}

/***************************************
          Custom Q Dropdown
****************************************/

/*** custom Queue global settings ***/

.customQ-dropdown * {
    padding:0;
    margin:0;
}

.customQ-dropdown a:only-of-type   {
    padding-top:2px;
    padding-bottom:2px;
    display:inline-block;
    text-decoration:none;
    text-transform:capitalize;
}

.customQ-dropdown ul li {
    list-style:none;
    list-style-image: none;
}

.customQ-dropdown li h4 {
    padding:2px 8px;
    margin:0;
    background-color:#ddd;
    color:#666;
    text-align:left;
}

.customQ-dropdown li > span {
    color:#E65524;
    font-weight:bold;
    float:right;
}
.customQ-dropdown li > span.disabled {
    color:#ccc;
    font-weight:normal;
}

/*** custom queue dropdown container ***/

.jb-overflowmenu-menu-primary div.customQ-dropdown {
    border-top-right-radius:6px;
    border-bottom-right-radius:6px;
    border-bottom-left-radius:6px;
    border: solid 1px #ddd;
    border: solid 1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    padding:12px 0;
    background:#fff;
    text-align: left;
    font-size: 0.95em;
    min-width: 245px;
    list-style: none;
    left:-1px;
    top:32px;
    position:absolute;
    z-index:-10;
}

.customQ-dropdown ul.scroll-height {
    max-height:400px;
    border-bottom:1px solid #ddd;
    overflow-y:auto;
    overflow-x:hidden;
}

/*** set max width for truncating long links ***/

.customQ-dropdown ul li > a {
    max-width:170px;
}

.customQ-dropdown ul li > ul li > a {
    max-width:180px!IMPORTANT;
}

/************ Custom Queue Button Styles *************/

.customQ-dropdown ul li, .customQ-dropdown ul li > a {
    color:#666;
    white-space: nowrap;

}
.customQ-dropdown ul li > a {
    margin-right:0px;
}

.customQ-dropdown ul li:hover {
    color:#fff;
    background-color:#08C;
    cursor:pointer;
}
.customQ-dropdown ul li:hover > a {
    color:#fff;
    cursor:pointer;
}
/************ Custom Queue Button with Sub Queues *************/

.customQ-dropdown ul li.subQ > i, .customQ-dropdown ul li div.editQ > i {
    padding:0px 8px;
}

/************ Custom Queue Button without Sub Queues *************/

.customQ-dropdown ul li.subQ > ul li > a:before  {
    content:"";
    padding:0px 8px;

}

.customQ-dropdown ul li:not(.subQ) > a:before  {
    content:"";
    padding:0px 4px;

}
.customQ-dropdown ul li:not(.subQ) > a {
    max-width:190px;
}

/************ Custom Queue Nested Queue Container *************/

.customQ-dropdown ul li > ul {
    background-color:#eee;
    border-top:1px dotted #ddd;
    border-bottom:1px dotted #ddd;
}

.customQ-dropdown ul li.subQ > ul li > a {
    padding-left:10px;
    padding-right:10px;
}

/************ Custom Queue Add/Save a Queue Button *************/

.customQ-dropdown .add-queue a {
    display:block;
    padding:10px;
    color:#666!IMPORTANT;
    cursor:pointer;
    white-space: nowrap;
}
/* ... */

